--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>My Project</titley>
 </head>
 <body>
+    <header></header>
+    <main></main>
+    <footer></footer>
     
 </body>
-</html>
+</html> 
